english-puzzle/fix: fix bug with start page on small displays

--- a/src/games/english-puzzle/puzzle.scss
+++ b/src/games/english-puzzle/puzzle.scss
@@ -49,6 +49,10 @@
     @media (orientation: portrait) {
       background-position: left bottom;
     }
+    @media (max-height: 640px) {
+      bottom: auto;
+      padding-bottom: 20px;
+    }
   }
 
   .h1 {
